[package]
name = "clawallex-sdk"
version = "1.0.0"
edition = "2021"
description = "Clawallex Payment API Rust SDK"
license = "MIT"
repository = "https://github.com/clawallex/rust-sdk"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
